templates/default-headers-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: traefik
spec:
  headers:
    customFrameOptionsValue: "SAMEORIGIN"
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsSeconds: 315360000
    stsIncludeSubdomains: true
    stsPreload: true
