templates/strip-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip
  namespace: traefik
spec:
  stripPrefix:
    prefixes:
      - "/traefik"
