templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service

spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service

spec:
  type: NodePort
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-websecure-service
spec:
  type: NodePort
  ports:
    - port: 443
      targetPort: websecure
  selector:
    app: traefik
